# talk-booking

.github/workflows/: ci-cd.yaml  github-ci.yaml  github-ci.yml  remote-state-backend-config.yaml  terraform-vpc.yaml  tf-talk-book-service.yaml  tf-vpc-config.yaml
ci_cd/docker/: Dockerfile
ci_cd/python/: Dockerfile
infrastructure/backend_config/: main.tf
infrastructure/global/vpc/: backend.tf  main.tf  network.tf  variables.tf
infrastructure/modules/talk-booking-service/: ecr.tf  ecs.tf  ecs_service.tf  iam.tf  load_balancer.tf  variables.tf
infrastructure/talk-booking-service/development/: main.tf  variables.tf
services/talk_booking/: Dockerfile  README.md  pyproject.toml
services/talk_booking/tests/integration/test_web_app/: test_main.py
services/talk_booking/web_app/: main.py
